skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_tabs_narrow_80_cols.snap
---
source: tests/snapshot_overview.rs
expression: "common::render_model_with_size(&model, 80, common::SNAPSHOT_HEIGHT)"
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-mixed  ·  Supervisor pi                     moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────┐"
"│ Ov │ Act │ Conv │ Merg │ Dec │ Cost │ Daem                                   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ tracked work (3 items) ──────────────────────────────────────────────────────┐"
"│Session demo-mixed  ·  Adhoc:1  Issues:1  Tasks:1  ·  2h25m                   │"
"│                                                                              │"
"│› VST-101               Needs input  opencode Fix dashboard state reader      │"
"│PR #44                                                                        │"
"│dashboard-rust        Submitting   codex    Build Rust dashboard              │"
"│                                                                              │"
"│adhoc-logs            Running      pi       Watch daemon logs                 │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   H history   f filters   n noise   s ses"
"                                                                                "
