skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_terminated_160_cols.snap
---
source: tests/snapshot_overview.rs
expression: rendered
---
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck   session demo-terminated  ·  Supervisor codex  ·  state: live file  ·  uptime 4h10m  ·  Adhoc 1 · Issues 0 · Tasks 0  ✔ session complete  moon ▾ │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Activity │ Conversations │ Decisions │ Costs │ Daemon                                                                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ summary ─────────────────┐┌ tracked work (1 items) ──────────────────────────────────────────────────────────────┐┌ selected work ───────────────────────────┐"
"│Status                    ││Type    State            Harness    Title      Cost           P Age       Activity    ││Summarize completed run                   │"
"│▸ Completed          1    ││Adhoc   Completed        claude     Summarize… —              — 40m       3m          ││adhoc-summary  ·  Adhoc  ·  Completed     │"
"│                          ││                                                                                      ││                                          │"
"│Merge queue               ││                                                                                      ││Where                                     │"
"│empty                     ││                                                                                      ││tmux tab Summarize completed run          │"
"│                          ││                                                                                      ││cwd     /repo/demo                        │"
"│Conflicts                 ││                                                                                      ││                                          │"
"│no edges                  ││                                                                                      ││Cost                                      │"
"│                          ││                                                                                      ││cost      — (no source)                   │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││Recent activity                           │"
"│                          ││                                                                                      ││no activity events yet                    │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││Recent decisions                          │"
"│                          ││                                                                                      ││• terminal-state-reached → complete       │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││Actions                                   │"
"│                          ││                                                                                      ││[ Focus tmux tab ]                        │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"│                          ││                                                                                      ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" ↹ tabs   j/k or ↑/↓ select   ⏎ detail   H history   f filters   n noise   s session   d decisions   e export   ? help   q quit    noise: hidden  ·  filter: off"
"                                                                                                                                                                "
